--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -29,11 +29,11 @@ Resources:
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
-      InstanceType: t3.small
+      InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: udapeople
-      ImageId: ami-01147599e39cb5802
+      KeyName: UdacityProject3-key
+      ImageId: ami-0eea504f45ef7a8f7
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
