--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,39 @@
 version: 2.1
 
-commands:
-  destroy-environment:
-    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
-    # parameters:
-    #   # Add parameter here   
-    steps:
-      - run:
-          name: Destroy environments
-          when: on_fail
-          command: |
-            # Your code here
-            aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} && aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
-            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive          
-            aws cloudformation delete-stack --stack-name frontend-stack-${CIRCLE_WORKFLOW_ID:0:7}
-            exit 0
-  revert-migrations:
-    description: Revert the last migration if successfully run in the current workflow.
-    parameters:
-      Workflow_ID:
-        type: string
-        default: ${CIRCLE_WORKFLOW_ID:0:7}
-    steps:
-        - run:
-            name: Revert migrations
-            when: on_fail
-            command: |
-                SUCCESS=$(curl --insecure  https://kvdb.io/75noLo4rCTw4gY2AjR7ikp/migration_<< parameters.Workflow_ID >>)
-                # Logic for reverting the database state
-                if (( $SUCCESS == 1 ));
-                then
-                  cd ~/project/backend
-                  npm install
-                  npm run migration:revert
-                fi
+# commands:
+#   destroy-environment:
+#     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+#     # parameters:
+#     #   # Add parameter here   
+#     steps:
+#       - run:
+#           name: Destroy environments
+#           when: on_fail
+#           command: |
+#             # Your code here
+#             aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} && aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+#             aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive          
+#             aws cloudformation delete-stack --stack-name frontend-stack-${CIRCLE_WORKFLOW_ID:0:7}
+#             exit 0
+#   revert-migrations:
+#     description: Revert the last migration if successfully run in the current workflow.
+#     parameters:
+#       Workflow_ID:
+#         type: string
+#         default: ${CIRCLE_WORKFLOW_ID:0:7}
+#     steps:
+#         - run:
+#             name: Revert migrations
+#             when: on_fail
+#             command: |
+#                 SUCCESS=$(curl --insecure  https://kvdb.io/75noLo4rCTw4gY2AjR7ikp/migration_<< parameters.Workflow_ID >>)
+#                 # Logic for reverting the database state
+#                 if (( $SUCCESS == 1 ));
+#                 then
+#                   cd ~/project/backend
+#                   npm install
+#                   npm run migration:revert
+#                 fi
             
 jobs:
   build-frontend:
@@ -167,7 +167,7 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      - destroy-environment:
+      # - destroy-environment:
       #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
      
 
