--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,7 +196,7 @@ jobs:
           command: |
             cd .circleci/ansible/
             ansible-playbook configure-server.yml -i inventory.txt
-      - destroy-environment
+      #- destroy-environment
 
   # run-migrations:
   #   docker:
