--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,42 +1,30 @@
----
-- name: 'update and upgrade packages.'
-  become: yes
+- name: "upgrade packages."
+  become: true
   apt:
-    upgrade: yes
-    update_cache: yes
-    cache_valid_time: 86400
+    upgrade: "yes"
 
-- name: 'upgrade apt packages'
-  become: yes
+- name: "install dependencies."
+  become: true
   apt:
-    autoremove: yes
-
-- name: 'update local apt repo.'
-  become: yes
-  apt:
-    autoremove: yes
-
-- name: 'remove stale dependencies'
-  become: yes
-  apt:
-    autoremove: yes
-
-- name: 'remove unneeded deps'
-  become: yes
-  apt:
-    autoremove: yes
-
-- name: 'install dependencies [nodejs and npm].'
-  become: yes
-  apt:
-    name: ['nodejs', 'npm']
+    name: ["nodejs", "npm"]
     state: latest
     update_cache: yes
 
-- name: 'install pm2'
-  become: yes
+- name: "install n"
+  become: true
+  npm:
+    name: n
+    global: yes
+    production: yes
+
+- name: "install nodejs 13.8.0"
+  become: true
+  shell: n 13.8.0
+
+- name: "install pm2"
+  become: true
   npm:
     name: pm2
     global: yes
-    state: latest
     production: yes
+    state: present
