--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ commands:
             name: Revert migrations
             when: on_fail
             command: |
-                SUCCESS=$(curl --insecure  https://kvdb.io/XWJyLSEYHNBKLQMfKu5wG9/migration_<< parameters.Workflow_ID >>)
+                SUCCESS=$(curl --insecure  https://kvdb.io/75noLo4rCTw4gY2AjR7ikp/migration_<< parameters.Workflow_ID >>)
                 # Logic for reverting the database state
                 if (( $SUCCESS == 1 ));
                 then
@@ -215,136 +215,136 @@ jobs:
 
 
   
-  # run_migrations:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     # Checkout code from git
-  #     - checkout
-  #     - restore_cache:
-  #         keys: [backend-build]
-  #     - run:
-  #         name: prepare environment for backend build
-  #         command: |
-  #           echo "Preparing environment for backend build"
-  #           echo ENVIRONMENT=$ENVIRONMENT >> backend/.env
-  #           echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> backend/.env
-  #           echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> backend/.env
-  #           echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> backend/.env
-  #           echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> backend/.env
-  #           echo TYPEORM_HOST=$TYPEORM_HOST >> backend/.env
-  #           echo TYPEORM_PORT=$TYPEORM_PORT >> backend/.env
-  #           echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> backend/.env
-  #           echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> backend/.env
-  #           echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> backend/.env
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           sudo apt update
-  #           sudo apt install -y awscli
-  #     - run:
-  #         name: Run migrations
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm run migrations > migrations_dump.txt
-  #           cat migrations_dump.txt
+  run_migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      # Checkout code from git
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: prepare environment for backend build
+          command: |
+            echo "Preparing environment for backend build"
+            echo ENVIRONMENT=$ENVIRONMENT >> backend/.env
+            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> backend/.env
+            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> backend/.env
+            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> backend/.env
+            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> backend/.env
+            echo TYPEORM_HOST=$TYPEORM_HOST >> backend/.env
+            echo TYPEORM_PORT=$TYPEORM_PORT >> backend/.env
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> backend/.env
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> backend/.env
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> backend/.env
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt update
+            sudo apt install -y awscli
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       
 
-  #     - run:
-  #         name: Send migration status to kvdb.io OR memstash.io #using kvdb.io
-  #         working_directory: ./backend
-  #         command: |
-  #           if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-  #           then
-  #               curl --insecure https://kvdb.io/XWJyLSEYHNBKLQMfKu5wG9/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-  #           fi
-  #   #Rollback on failure      
-  #     - destroy-environment
-  #     - revert-migrations
+      - run:
+          name: Send migration status to kvdb.io OR memstash.io #using kvdb.io
+          working_directory: ./backend
+          command: |
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+                curl --insecure https://kvdb.io/75noLo4rCTw4gY2AjR7ikp/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            fi
+    #Rollback on failure      
+      - destroy-environment
+      - revert-migrations
 
 
 
-  # deploy_frontend:
-  #   docker:
-  #     - image: python:alpine3.16
-  #   steps:
-  #     - checkout
-  #     - attach_workspace:
-  #         at: ~/
+  deploy_frontend:
+    docker:
+      - image: python:alpine3.16
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/
 
-  #     - run:
-  #         name: Install image dependencies
-  #         command: |
-  #           apk add --update tar gzip ansible nodejs npm curl
-  #     - run:
-  #         name: Install AWS CLI
-  #         command: |
-  #           pip install awscli
-  #     - run:
-  #         name: Install frontend dependencies
-  #         command: |
-  #           cd frontend
-  #           npm install
-  #     - run:
-  #         name: Get backend url
-  #         command: |
-  #           export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
-  #           export API_URL="http://${BACKEND_IP}:3030"
-  #           echo "API_URL=${API_URL}" >> frontend/.env
-  #           echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
-  #           cat frontend/.env
-  #     - run:
-  #         name: Deploy frontend objects 
-  #         command: |
-  #           cd frontend
-  #           npm run build
-  #           tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-  #           aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-  #           echo "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}"
-  #     - revert-migrations
-  #     - destroy-environment
+      - run:
+          name: Install image dependencies
+          command: |
+            apk add --update tar gzip ansible nodejs npm curl
+      - run:
+          name: Install AWS CLI
+          command: |
+            pip install awscli
+      - run:
+          name: Install frontend dependencies
+          command: |
+            cd frontend
+            npm install
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL=${API_URL}" >> frontend/.env
+            echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Deploy frontend objects 
+          command: |
+            cd frontend
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+            echo "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}"
+      - revert-migrations
+      - destroy-environment
 
-  # deploy_backend:
-  #   docker:
-  #     - image: python:alpine3.16
-  #   steps:
-  #     - checkout
-  #     - add_ssh_keys:
-  #         fingerprints: 
-  #           - "3d:6f:ed:aa:fb:e6:7e:63:b9:d9:47:99:e3:79:70:5d"
-  #     - attach_workspace:
-  #         at: ~/
+  deploy_backend:
+    docker:
+      - image: python:alpine3.16
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: 
+            - "3d:6f:ed:aa:fb:e6:7e:63:b9:d9:47:99:e3:79:70:5d"
+      - attach_workspace:
+          at: ~/
 
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           pip install --upgrade pip
-  #           pip install awscli
-  #           apk add --update nodejs npm ansible zip
-  #     - run:
-  #         name: Deploy backend
-  #         no_output_timeout: 30m
-  #         command: |
-  #           echo ENVIRONMENT=production >> "backend/.env"
-  #           echo TYPEORM_CONNECTION=postgres >> "backend/.env"
-  #           echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
-  #           echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> "backend/.env"
-  #           echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
-  #           echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
-  #           echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
-  #           echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
-  #           echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
-  #           echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
-  #           cat backend/.env
+      - run:
+          name: Install dependencies
+          command: |
+            pip install --upgrade pip
+            pip install awscli
+            apk add --update nodejs npm ansible zip
+      - run:
+          name: Deploy backend
+          no_output_timeout: 30m
+          command: |
+            echo ENVIRONMENT=production >> "backend/.env"
+            echo TYPEORM_CONNECTION=postgres >> "backend/.env"
+            echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
+            echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> "backend/.env"
+            echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
+            echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
+            echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
+            cat backend/.env
             
-  #           tar -C backend -czvf artifact.tar.gz .
-  #           ls -la
-  #           cd .circleci/ansible
-  #           cat inventory.txt
-  #           export ANSIBLE_HOST_KEY_CHECKING=False
-  #           ansible-playbook -i inventory.txt deploy-backend.yml
-  #     - destroy-environment
+            tar -C backend -czvf artifact.tar.gz .
+            ls -la
+            cd .circleci/ansible
+            cat inventory.txt
+            export ANSIBLE_HOST_KEY_CHECKING=False
+            ansible-playbook -i inventory.txt deploy-backend.yml
+      - destroy-environment
 
   # smoke-test:
   #   docker:
