--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -385,7 +385,7 @@ jobs:
   #           if curl -s ${URL} | grep "Welcome"
   #           then
   #               # Change this to 0 after the job fails
-  #             return 0
+  #             return 1
   #           else
   #             return 1
   #           fi
@@ -475,12 +475,12 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      # - run_migrations:
-      #     requires: [configure-infrastructure]
-      # - deploy_backend:
-      #     requires: [run_migrations]
-      # - deploy_frontend:
-      #     requires: [run_migrations]
+      - run_migrations:
+          requires: [configure-infrastructure]
+      - deploy_backend:
+          requires: [run_migrations]
+      - deploy_frontend:
+          requires: [run_migrations]
       # - smoke-test:
       #     requires: [deploy_backend, deploy_frontend]
       # - cloudfront_update:
