--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,7 +247,9 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run migrations > migrations_dump.txt
+            npm run build
+            npm run migrations >> migrations_dump.txt
+            ls -al
             cat migrations_dump.txt
       
 
