--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,33 +215,17 @@ jobs:
 
 
   
-  run_migrations:
+   run-migrations:
     docker:
-      - image: circleci/node:13.8.0
+      - image: python:3.7-alpine3.11
     steps:
-      # Checkout code from git
       - checkout
+      - run:
+          name: Install deps
+          command: |
+            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
       - restore_cache:
           keys: [backend-build]
-      - run:
-          name: prepare environment for backend build
-          command: |
-            echo "Preparing environment for backend build"
-            echo ENVIRONMENT=$ENVIRONMENT >> backend/.env
-            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> backend/.env
-            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> backend/.env
-            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> backend/.env
-            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> backend/.env
-            echo TYPEORM_HOST=$TYPEORM_HOST >> backend/.env
-            echo TYPEORM_PORT=$TYPEORM_PORT >> backend/.env
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> backend/.env
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> backend/.env
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> backend/.env
-      - run:
-          name: Install dependencies
-          command: |
-            sudo apt update
-            sudo apt install -y awscli
       - run:
           name: Run migrations
           command: |
@@ -251,17 +235,14 @@ jobs:
             npm run migrations >> migrations_dump.txt
             ls -al
             cat migrations_dump.txt
-      
-
       - run:
-          name: Send migration status to kvdb.io OR memstash.io #using kvdb.io
-          working_directory: ./backend
+          name: Send migration results to kvdb
           command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            if grep -q "migrations" ~/project/backend/migrations_dump.txt
             then
-                curl --insecure https://kvdb.io/75noLo4rCTw4gY2AjR7ikp/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl --insecure https://kvdb.io/WeGR8zVVEXzesL9QLzHf8i/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
-    #Rollback on failure      
+            
       - destroy-environment
       - revert-migrations
 
