--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -452,20 +452,23 @@ workflows:
           requires: [build-frontend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      - run_migrations:
+      - run-migrations:
           requires: [configure-infrastructure]
-      - deploy_backend:
-          requires: [run_migrations]
-      - deploy_frontend:
-          requires: [run_migrations]
-      # - smoke-test:
-      #     requires: [deploy_backend, deploy_frontend]
-      # - cloudfront_update:
-      #     requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront_update]
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
+      - cloudfront-update:
+          requires: [smoke-test]
+      - add-prometheus-node-exporter:
+          requires: [smoke-test]
 
 
 
