--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,7 +243,7 @@ jobs:
       - destroy-environment
 
 
-  deploy_frontend:
+  deploy-frontend:
     docker:
       - image: python:alpine3.16
     steps:
@@ -283,7 +283,7 @@ jobs:
       - revert-migrations
       - destroy-environment
 
-  deploy_backend:
+  deploy-backend:
     docker:
       - image: python:alpine3.16
     steps:
@@ -462,12 +462,12 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
-      - add-prometheus-node-exporter:
-          requires: [smoke-test]
+      # - smoke-test:
+      #     requires: [deploy-backend, deploy-frontend]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - add-prometheus-node-exporter:
+      #     requires: [smoke-test]
 
 
 
