--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo apt update
-            sudo apt install -y awscli
+            apt update
+            apt install -y awscli
       - restore_cache:
           keys: [backend-build]
       - run:
