--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apt update
-            apt install -y awscli
+            sudo apk update
+            sudo apk install -y awscli
       - restore_cache:
           keys: [backend-build]
       - run:
