--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk update
-            apk install -y awscli
+            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
       - restore_cache:
           keys: [backend-build]
       - run:
