--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,13 +215,17 @@ jobs:
 
   run-migrations:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: circleci/node:13.8.0
     steps:
       - checkout
-      # - run:
-      #     name: Install dependencies
-      #     command: |
-      #       apk add --update --no-cache tar gzip nodejs npm aws-cli curl
+      - run:
+          name: Install dependencies
+          command: |
+                  - run:
+          name: Install dependencies
+          command: |
+            sudo apt update
+            sudo apt install -y awscli
       - restore_cache:
           keys: [backend-build]
       - run:
