--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,7 +245,7 @@ jobs:
       - destroy-environment
 
 
-  deploy-frontend:
+  deploy_frontend:
     docker:
       - image: python:alpine3.16
     steps:
