--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -326,52 +326,52 @@ jobs:
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment
 
-  # smoke-test:
-  #   docker:
-  #     - image: python:alpine3.16
-  #   steps:
-  #     - checkout
-  #     - attach_workspace:
-  #         at: ~/
-  #     - run:
-  #         name: Install image dependencies
-  #         command: |
-  #           apk add --update curl nodejs npm
-  #           pip install awscli
+  smoke-test:
+    docker:
+      - image: python:alpine3.16
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install image dependencies
+          command: |
+            apk add --update curl nodejs npm
+            pip install awscli
 
-  #     - run:
-  #         name: Get backend url and perform smoke test on the backend server
-  #         command: |
-  #           export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
-  #           export API_URL="http://${BACKEND_IP}:3030"
-  #           echo "API URL: ${API_URL}"
-  #           echo "Wait for backend to become available..."
-  #           sleep 180s
-  #           echo "Attempting to reach backend..."
-  #           if curl "${API_URL}/api/status" | grep "ok"
-  #           then
-  #             echo "Backend status OK"
-  #             exit 0
-  #           else
-  #             echo "Backend status NOT OK"
-  #             exit 1
-  #           fi
+      - run:
+          name: Get backend url and perform smoke test on the backend server
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API URL: ${API_URL}"
+            echo "Wait for backend to become available..."
+            sleep 180s
+            echo "Attempting to reach backend..."
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+              echo "Backend status OK"
+              exit 0
+            else
+              echo "Backend status NOT OK"
+              exit 1
+            fi
 
-  #     - run:
-  #         name: Frontend smoke test
-  #         command: |
-  #           URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-  #           echo ${URL} 
-  #           if curl -s ${URL} | grep "Welcome"
-  #           then
-  #               # Change this to 0 after the job fails
-  #             return 1
-  #           else
-  #             return 1
-  #           fi
+      - run:
+          name: Frontend smoke test
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
+            then
+                # Change this to 0 after the job fails
+              return 1
+            else
+              return 1
+            fi
 
-  #     - destroy-environment
-  #     - revert-migrations
+      - destroy-environment
+      - revert-migrations
 
 
 
@@ -464,8 +464,8 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
       # - add-prometheus-node-exporter:
