--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -465,10 +465,10 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
-      # - add-prometheus-node-exporter:
-      #     requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
+      - add-prometheus-node-exporter:
+          requires: [smoke-test]
 
 
 
