--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,7 @@ jobs:
       - run:
           name: Ensure back-end infrastructure exists
           command: |
-  #          yum -y install -y tar gzip 
+            yum -y install -y tar gazip 
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
