--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,7 +136,7 @@ jobs:
       - run:
           name: scan backend
           command: |
-            cd backtend
+            cd backend
             npm install
             npm audit fix --audit-level=critical --force
 
